<resources>
    <string name="app_name">TheMovieApp</string>
    <string name="search_icon_title">Search</string>
    <string name="lbl_discover">Discover</string>
    <string name="lbl_solo_heading">Solo Leveling 2023\nAnime Adaptation</string>
    <string name="lbl_best_popular_films_and_serials">BEST POPULAR FILMS AND SERIALS</string>
    <string name="lbl_check_movie_showtimes">Check Movie\nShowtimes</string>
    <string name="lbl_see_more"><u>SEE MORE</u></string>
    <string name="ll_showcases">SHOWCASES</string>
    <string name="lbl_more_showcases"><u>MORE SHOWCASES</u></string>
    <string name="lbl_best_sellers">BEST SELLERS</string>
    <string name="lbl_more_actors"><u>MORE ACTORS</u></string>
    <string name="lvl_detail_solo_leveling">Solo Leveling The Animation</string>
    <string name="lbl_released_year">2016</string>
    <string name="lbl_time_logo">2h 13min</string>
    <string name="lbl_number_of_votes">388876 VOTES</string>
    <string name="lbl_rating">9,75</string>
    <string name="lbl_first_genre">Action</string>
    <string name="lbl_genre_second">Family</string>
    <string name="lbl_genre_third">Adventure</string>
    <string name="lbl_storyline">STORYLINE</string>
    <string name="lbl_storyline_text">Solo Leveling is finally getting an anime and will be helmed by some pretty big names in the industry. At this year\'s Anime Expo, popular webtoon Solo Leveling was announced to receive an anime adaptation. The webtoon is based on the web novel written by Chugong, which concluded back in 2021.</string>
    <string name="lbl_rate_movie">RATE MOVIE</string>
    <string name="lbl_actors">ACTORS</string>
    <string name="lbl_creators">CREATORS</string>
    <string name="lbl_more_creators"><u>MORE CREATORS</u></string>
    <string name="lbl_original_title">Original Title: </string>
    <string name="lbl_original_text">Solo Leveling 2023 Anime Adaption By A-1</string>
    <string name="lbl_type_title">Type:</string>
    <string name="lbl_type_text">Action, Fantasy</string>
    <string name="lbl_production_title">Production:</string>
    <string name="lbl_production_text">Korea, Seoul</string>
    <string name="lbl_premiere_title">Premiere:</string>
    <string name="lbl_premiere_text">21 Jan 2023 (World)</string>
    <string name="lbl_description_title">Description:</string>
    <string name="lbl_about_film">ABOUT FILM</string>
    <string name="lbl_hint">Please enter movie name</string>
</resources>