<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<!--        <com.google.android.material.appbar.AppBarLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="?attr/actionBarSize"-->
<!--            android:background="@color/colorPrimaryDark">-->
<!--            <com.google.android.material.appbar.MaterialToolbar-->
<!--                android:id="@+id/toolBar"-->
<!--                app:title="@string/lbl_discover"-->
<!--                app:titleTextColor="@color/white"-->
<!--                app:titleCentered="true"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"/>-->
<!--        </com.google.android.material.appbar.AppBarLayout>-->

        <RelativeLayout
            android:id="@+id/rlAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblDiscover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Discover"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:textSize="24sp"/>
            <androidx.appcompat.widget.AppCompatImageView
                app:srcCompat="@drawable/ic_menu"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSearch"
                app:srcCompat="@drawable/ic_search"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_below="@id/rlAppBar"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <FrameLayout
                    android:id="@+id/flBanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPagerBanner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_banner"/>
                    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                        android:id="@+id/dotsIndicatorBanner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:dotsColor="@android:color/darker_gray"
                        app:selectedDotColor="@color/colorAccent"
                        app:dotsCornerRadius="@dimen/margin_small"
                        app:dotsSize="@dimen/margin_medium"
                        app:dotsSpacing="@dimen/margin_small"
                        app:dotsWidthFactor="1.0"
                        android:layout_gravity="bottom|center"
                        app:progressMode="false"
                        android:layout_marginBottom="@dimen/margin_medium"/>
                </FrameLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBestPopularFilmsAndSeries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_below="@id/flBanner"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:text="@string/lbl_best_popular_films_and_serials"/>

                <include
                    android:id="@+id/vpBestPopularMovieList"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/tvBestPopularFilmsAndSeries"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    layout="@layout/view_pod_movie_list"/>

                <RelativeLayout
                    android:id="@+id/rlCheckMovieShowtimes"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_movie_show_time"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:background="@color/colorPrimaryLight"
                    android:layout_below="@id/vpBestPopularMovieList">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCheckMovieShowTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_check_movie_showtimes"
                        android:textSize="@dimen/text_heading_1x"
                        android:layout_marginStart="@dimen/margin_medium_3"
                        android:layout_marginTop="@dimen/margin_medium_3"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSeeMore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/lbl_see_more"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/margin_medium_3"
                        android:layout_marginBottom="@dimen/margin_medium_3"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivCheckMovieShowTimeLocation"
                        android:layout_width="@dimen/margin_xlarge"
                        android:layout_height="@dimen/margin_xxlarge"
                        app:srcCompat="@drawable/ic_baseline_location_on_white_24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/margin_xlarge"/>
                </RelativeLayout>
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tlGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:layout_below="@id/rlCheckMovieShowtimes"
                    app:tabTextColor="@color/colorSecondaryText"
                    app:tabSelectedTextColor="@color/white"
                    app:tabIndicatorColor="@color/colorAccent"
                    app:tabMode="scrollable"
                    android:background="@color/colorPrimary"/>

                <FrameLayout
                    android:id="@+id/flMovieAndGenre"
                    android:layout_width="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:paddingTop="@dimen/margin_large"
                    android:paddingBottom="@dimen/margin_large"
                    android:layout_below="@id/tlGenre"
                    android:layout_height="wrap_content">
                    <include
                        android:id="@+id/vpMovieByGenre"
                        layout="@layout/view_pod_movie_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </FrameLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvShowCase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/flMovieAndGenre"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:text="@string/ll_showcases"
                    android:textColor="@color/colorSecondaryText"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMoreShowCases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tvShowCase"
                    android:layout_alignParentEnd="true"
                    android:text="@string/lbl_more_showcases"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/margin_medium_2"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvShowCases"
                    android:layout_below="@id/tvShowCase"
                    android:paddingEnd="@dimen/margin_medium_2"
                    android:clipToPadding="false"
                    android:layout_marginTop="@dimen/margin_card_medium_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <include
                    android:id="@+id/vpActorList"
                    layout="@layout/view_pod_actor_list"
                    android:layout_width="match_parent"
                    android:layout_below="@id/rvShowCases"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>